--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,5 @@
     "exclude": [
         "node_modules"
     ],
-    "include": ["flappy-bird/**/*"]
+    "include": ["flappy-bird/**/*", "breakout/**/*"]
 }
