sync in progress conversion to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,18 @@
     "compilerOptions": {
         "target": "es2015",
         "module": "es2015",
+        "moduleResolution": "node",
         "sourceMap": true,
-      },
+        "strict": true,
+        "lib": [
+            "es2016",
+            "dom"
+        ]
+    },
     "exclude": [
         "node_modules"
     ],
-    "include": ["games/**/*"]
+    "include": [
+        "games/**/*",
+    ]
 }
