--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
-  "devDependencies": {
-    "typescript": "^5.2.2"
-  }
+    "devDependencies": {
+        "@types/three": "^0.156.0",
+        "three": "^0.156.1",
+        "typescript": "^5.2.2"
+    },
+    "dependencies": {
+        "ndarray": "^1.0.19"
+    }
 }
