--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-    "devDependencies": {
-        "@types/three": "^0.156.0",
-        "three": "^0.156.1",
-        "typescript": "^5.2.2"
+    "scripts": {
+        "check-types": "tsc --project ./jsconfig.json"
     },
-    "dependencies": {
-        "ndarray": "^1.0.19"
+    "devDependencies": {
+        "typescript": "^5.4.5"
     }
 }
