Refactor weather tool to use uv for dependency management
- Update main.py to use uv for package management and execution
- Remove obsolete data.json file (106 lines deleted)
- Update GitHub workflow to use uv instead of pip
- Modify index.html to improve weather data display

--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -34,14 +34,8 @@ jobs:
     - name: Run weather script
       env:
         KNMI_API_KEY: ${{ secrets.KNMI_API_KEY }}
+        JSONBIN_API_KEY: ${{ secrets.JSONBIN_API_KEY }}
+        JSONBIN_BIN_ID: ${{ secrets.JSONBIN_BIN_ID }}
       run: |
         cd tools/weather
         python main.py
-        
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./tools/weather
-        destination_dir: weather
