--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,24 @@ data.js
 *.map
 node_modules
 *.h5
+
+# Python virtual environment
+.venv/
+__pycache__/
+*.pyc
+*.pyo
+
+# Environment and secret files
+.env
+.env.*
+*.key
+*.pem
+*.crt
+*.p12
+*.pfx
+secrets.json
+config.json
+credentials.json
+
+# Pre-commit
+# .secrets.baseline should be committed to establish baseline
