Flatten project structure and standardize file naming
- Move all projects from games/, simulations/, tools/ to root level
- Remove orphan files (main.py, package.json, README.md)
- Rename class files to PascalCase (Vector2.js, Box.js, etc.)
- Update index.html, CLAUDE.md, and GitHub Actions workflow paths

--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -7,35 +7,35 @@ on:
   workflow_dispatch: # Allow manual triggering
   push:
     paths:
-      - 'tools/weather/**'
+      - 'weather/**'
       - '.github/workflows/weather.yml'
 
 jobs:
   update-weather:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-      
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.11'
-        
+
     - name: Install uv
       uses: astral-sh/setup-uv@v3
-      
+
     - name: Install dependencies
       run: |
-        cd tools/weather
+        cd weather
         uv pip install --system -r pyproject.toml
-        
+
     - name: Run weather script
       env:
         KNMI_API_KEY: ${{ secrets.KNMI_API_KEY }}
         JSONBIN_API_KEY: ${{ secrets.JSONBIN_API_KEY }}
         JSONBIN_BIN_ID: ${{ secrets.JSONBIN_BIN_ID }}
       run: |
-        cd tools/weather
+        cd weather
         python main.py
