--- a/.github/workflows/weather.yml
+++ b/.github/workflows/weather.yml
@@ -2,17 +2,21 @@ name: Update Weather Forecast
 
 on:
   schedule:
-    # Run every 5 minutes
-    - cron: '*/5 * * * *'
-  workflow_dispatch: # Allow manual triggering
+    - cron: '*/15 * * * *'
+  workflow_dispatch:
   push:
     paths:
       - 'weather/**'
       - '.github/workflows/weather.yml'
 
+concurrency:
+  group: weather-update
+  cancel-in-progress: true
+
 jobs:
   update-weather:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
+    timeout-minutes: 10
 
     steps:
     - name: Checkout repository
